ingressmigration/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: migration
spec:
  gatewayClassName: nginx 
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.adrilab.xyz"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.adrilab.xyz"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: adrilab-xyz-secret
  - name: https-default-tls-mode
    port: 8443
    protocol: HTTPS
    hostname: "*.adrilab.xyz"
    tls:
      certificateRefs:
      - kind: Secret
        name: adrilab-xyz-secret 
        namespace: migration
