ingressmigration/httpredirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: migration
spec:
  parentRefs:
  - name: example-gateway
    sectionName: http
  hostnames:
  - foo.adrilab.xyz
  - bar.adrilab.xyz
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
