ingressmigration/httproutebar.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar
  namespace: migration
spec:
  parentRefs:
  - name: example-gateway
    sectionName: https
  hostnames:
  - bar.adrilab.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bar
      port: 80
